--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.1",
+    "request": "^2.88.0",
     "uuid": "^3.3.2"
   }
 }
